# mobius

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
assets/: export.py  startup.blend  test.world.blend
dependencies/: CMakeLists.txt  Makefile
src/: collision.cc  collision.h  geometry.h  glo.h  level.mesh.pb  mesh.cc  mesh.h  mobius.cc  mobius.proto  player.cc  player.h  player.mesh.pb  proto_util.h  render.cc  render.h  visibility.cc  visibility.h  world.cc  world.h
src/data/: demo.world.pb  level.mesh.pb  player.mesh.pb
src/shaders/: draw.fragment.glsl  draw.vertex.glsl  gamma.glsl.h  grain.fragment.glsl  hsv.glsl.h  main.fragment.glsl  main.vertex.glsl  outline.fragment.glsl  outline.vertex.glsl  post.fragment.glsl  quad.vertex.glsl  simplex.glsl.h  stencil.fragment.glsl  world.fragment.glsl  world.vertex.glsl
src/tools/: embed.cc  simplex_lut.cc
